--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,8 +26,9 @@ layout: compress
                     <hr class="hr-line">
                     <h3 class="title">
                         <a href="{{ site.url }}">
+                        	<p style="font-size:1rem;font-weight:300">{{ site.author }}</p>
                         	<p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
-			            </a>
+                        </a>
                     </h3>
                     {% include social-links.html %}
                   <hr class="hr-line">
