--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
 				<ul class="dl-submenu">
 					<li>
 						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
+						<p>{{ site.author }}</p>
 						<h4>{{ site.title }}</h4>
 						<p>{{ site.description }}</p>
 					</li>
