--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 //colors
-$bodycolor           : #D24D57;
+$bodycolor           : #5B5858;
 $black           	 : #000;
 $white               : #fff;
 $color_gray          : #e8e8e8;
