--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,10 @@ layout: compress
     <!-- Header -->
     <header class="header" role="banner">
         <div class="wrapper animated fadeIn">
+            <div class="entry-meta">
+                {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+                <span class="entry-tags">{% for post in posts %}<a href="{{ post.url }}" title="in {{ post.lang }}" class="tag"><span class="term">{{ post.lang }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
+            </div>
             <div class="content">
                 <div class="post-title {% if page.feature %} feature {% endif %}">
                     <h1>{{ page.title }}</h1>
@@ -34,7 +38,7 @@ layout: compress
                 </div>
                 {{ content }}
                 <div class="entry-meta">
-                {% include meta.html %}
+                    {% include meta.html %}
                 </div>
             </div>
         </div>
