--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -22,8 +22,9 @@ layout: compress
                     </a>
                 </div>
                 <div class="post-list">
-                    {% for post in site.posts %} 
-                        {% if post.project == null %}
+                    {% assign posts=site.posts | where:"lang", page.lang %}
+                    {% for post in posts %} 
+                    {% if post.project == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
@@ -31,7 +32,7 @@ layout: compress
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
                         </li>
                     </ul>
-                        {% endif %}
+                    {% endif %}
                     {% endfor %}
                 </div>
             </div>
