--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -132,6 +132,70 @@ body {
 	    box-shadow: none;
 	}
 }
+// entry lng
+.entry-lng {
+	@include font-rem(12);
+	text-transform: uppercase;
+	color: lighten($color_tuatara,60);
+	padding-left: 0;
+	a {
+		color: lighten($color_tuatara,60);
+	}
+	li {
+	    list-style-type: none;
+	    display: inline;
+	}
+	.lng {
+	    display: inline-block;
+        border: 1px solid;
+        border-color: rgba($color_mercury,0.5) rgba($color_bon_jour,0.5) $color_mischka;
+        @include rounded(3px);
+        text-decoration: none;
+        background-color: $white;
+        color: $color_tuatara;
+        @include transition(.75s);
+        margin: 2px 5px;
+		span {
+			float: left;
+			padding: 2px 6px;
+		}
+		.count {
+			background-color: darken($white,15);
+			@include border-radius(3px,3px,0,0);
+		}
+		&:hover {
+			background-color: darken($white,15);
+			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
+		}
+	}
+	.lng-sel {
+	    display: inline-block;
+        border: 1px solid;
+        border-color: rgba($color_mercury,0.5) rgba($color_bon_jour,0.5) $color_mischka;
+        @include rounded(3px);
+        text-decoration: none;
+        background-color: $color_tuatara;
+        color: $white;
+        @include transition(.75s);
+        margin: 2px 5px;
+		span {
+			float: left;
+			padding: 2px 6px;
+		}
+		.count {
+			background-color: darken($white,15);
+			@include border-radius(3px,3px,0,0);
+		}
+		&:hover {
+			background-color: darken($white,15);
+			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
+		}
+	}
+}
+header .entry-lng {
+	display: block;
+	float: right;
+}
 // entry meta
 .entry-meta {
 	@include font-rem(12);
@@ -168,7 +232,51 @@ body {
 			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
 		}
 	}
-}
+	.lng {
+	    display: inline-block;
+        border: 1px solid;
+        border-color: rgba($color_mercury,0.5) rgba($color_bon_jour,0.5) $color_mischka;
+        @include rounded(3px);
+        text-decoration: none;
+        background-color: $white;
+        color: $color_tuatara;
+        @include transition(.75s);
+        margin: 2px 5px;
+		span {
+			float: left;
+			padding: 2px 6px;
+		}
+		.count {
+			background-color: darken($white,15);
+			@include border-radius(3px,3px,0,0);
+		}
+		&:hover {
+			background-color: darken($white,15);
+			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
+		}
+	}
+	.lng-sel {
+	    display: inline-block;
+        border: 1px solid;
+        border-color: rgba($color_mercury,0.5) rgba($color_bon_jour,0.5) $color_mischka;
+        @include rounded(3px);
+        text-decoration: none;
+        color: $white;
+        @include transition(.75s);
+        margin: 2px 5px;
+		span {
+			float: left;
+			padding: 2px 6px;
+		}
+		.count {
+			background-color: darken($white,15);
+			@include border-radius(3px,3px,0,0);
+		}
+		&:hover {
+			background-color: darken($white,15);
+			box-shadow: 0 0 1px 0 rgba($color_shark,0.5);
+		}
+	}}
 header .entry-meta {
 	display: none; // hide header meta on small screens
 	@media #{$notsmall} {
