--- a/_includes/collecttags.html
+++ b/_includes/collecttags.html
@@ -1,22 +1,14 @@
 {% assign posts=site.posts | where:"lang", page.lang %}
 {% assign rawtags = "" %}
 {% for post in posts %}
-  {% assign ttags = post.tags | join:'|' | append:'|' %}
-  {% assign rawtags = rawtags | append:ttags %}
+    {% for tag in post.tags %}
+        {% if rawtags == "" %}
+        {% assign rawtags = tag %}
+        {% else %}
+            {% unless rawtags contains tag %}
+                {% assign rawtags = rawtags | join:'|' | append:'|' | append:tag | split:'|' %}
+            {% endunless %}
+        {% endif %}
+    {% endfor %}
 {% endfor %}
-{% assign rawtags = rawtags | split:'|' | sort %}
-
-{% assign stags = "" %}
-{% for tag in rawtags %}
-  {% if tag != "" %}
-    {% if stags == "" %}
-      {% assign stags = tag | split:'|' %}
-    {% endif %}
-    {% unless stags contains tag %}
-      {% assign stags = stags | join:'|' | append:'|' | append:tag | split:'|' %}
-    {% endunless %}
-  {% endif %}
-{% endfor %}
-{% for tag in stags %}
-<!-- {{ tag }} -->
-{% endfor %}
+{% assign stags=rawtags | sort %}
