--- a/_includes/collecttags.html
+++ b/_includes/collecttags.html
@@ -1,4 +1,4 @@
-{% assign posts=site.posts | where:"lang", page.lang %}
+{% assign posts=site.posts | where:"lang", navlang %}
 {% assign rawtags = "" %}
 {% for post in posts %}
     {% for tag in post.tags %}
