--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -17,12 +17,15 @@ layout: compress
             <div class="content">
                 <div class="post-title">
                     <h1>{{ page.title }}</h1>
-                    <a class="btn zoombtn" href="{{site.url}}">
+                    <a class="btn zoombtn" href="{{site.url}}/{{ navlang }}/">
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
+
+                {{ content }}
+
                 <div class="post-list">
-                    {% assign posts=site.posts | where:"lang", page.lang %}
+                    {% assign posts=site.posts | where:"lang", navlang %}
                     {% for post in posts %} 
                     {% if post.project == null %}
                     <ul>
