--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,14 +20,14 @@ layout: compress
             <div class="entry-lng">
                 <span class="entry-lng">
                     {% for post in posts %}
-                    {% assign language = site.data.languages | where:"lang", post.lang | first %}
-                    {% if page.lang == post.lang %}
-                    <a href="" title="{{ language.postcurrenttitle }}" class="lng-sel">
-                        <span class="term">{{ language.name }}</span>
+                    {% assign language =site.data.messages.locales[post.lang] %}
+                    {% if navlang == post.lang %}
+                    <a href="" title="{{ language.post_current_title }}" class="lng-sel">
+                        <span class="term">{{ language.lang_name }}</span>
                     </a>
                     {% else %}
-                    <a href="{{ post.url }}" title="{{ language.posttitle }}" class="lng">
-                            <span class="term">{{ language.name }}</span>
+                    <a href="{{ post.url }}" title="{{ language.post_title }}" class="lng">
+                            <span class="term">{{ language.lang_name }}</span>
                         </a>
                     {% endif %}
                     {% endfor %}
@@ -47,11 +47,7 @@ layout: compress
                     {% if page.project %}
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
                     {% else %}
-                    {% if page.lang %}
-                    <a class="btn zoombtn" href="{{site.url}}/posts/{{ page.lang }}/">
-                    {% else %}
-                    <a class="btn zoombtn" href="{{site.url}}/posts/">
-                    {% endif %}
+                    <a class="btn zoombtn" href="{{site.url}}/posts/{{ navlang }}/">
                     {% endif %}
                         <i class="fa fa-chevron-left"></i>
                     </a>
