--- a/_layouts/tag-list.html
+++ b/_layouts/tag-list.html
@@ -17,16 +17,18 @@ layout: compress
             <div class="content">
                 <div class="post-title">
                     <h1>{{ page.title }}</h1>
-                    <a class="btn zoombtn" href="{{site.url}}">
+                    <a class="btn zoombtn" href="{{site.url}}/{{ navlang }}/">
                       <i class="fa fa-home"></i>
                     </a>
                 </div>
+
+                {{ content }}
 
                 {% include collecttags.html %}
 
                 <ul class="entry-meta inline-list">
                   {% for item in stags %}
-                  {% assign tposts=site.tags[item] | where:"lang", page.lang %}
+                  {% assign tposts=site.tags[item] | where:"lang", navlang %}
                     <li>
                       <a href="#{{ item }}" class="tag">
                         <span class="term">{{ item }}</span>
@@ -37,7 +39,7 @@ layout: compress
                 </ul>
                 
                 {% for item in stags %}
-                  {% assign tposts=site.tags[item] | where:"lang", page.lang %}
+                  {% assign tposts=site.tags[item] | where:"lang", navlang %}
                   <article>
                   <h2 id="{{ item }}" class="tag-heading">{{ item }}</h2>
                     <ul>
