--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
+                         <a class="btn zoombtn" href="{{ site.url }}/about/{{ navlang }}/">
                             {{ site.data.messages.locales[navlang].about }}
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts/{{ navlang }}/">
