--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,6 +10,7 @@
 			<li>
 				<a href="#">{{ site.data.messages.locales[navlang].about }}</a>
 				<ul class="dl-submenu">
+                    <!--<li class="dl-back"><a href="#">close</a></li>-->
                     <li>
 						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
 						<p>{{ site.author }}</p>
