browser based language redirection

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,9 @@ layout: compress
             if (userLang == "de") {
                 window.location.href = "{{ site.url }}/de/"
             }
+            else if (userLang == "de-DE") {
+                window.location.href = "{{ site.url }}/de/"
+            }
             else {
                 window.location.href = "{{ site.url }}/en/"
             }
