--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,26 +14,7 @@ layout: compress
     <!-- Header -->
     <header class="header" role="banner">
         <div class="wrapper animated fadeIn">
-            {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-            {% assign counter=0 %}{% for post in posts%}{% assign counter=counter | plus:1 %}{% endfor %}
-            {% if counter > 1 %}
-            <div class="entry-lng">
-                <span class="entry-lng">
-                    {% for post in posts %}
-                    {% assign language =site.data.messages.locales[post.lang] %}
-                    {% if navlang == post.lang %}
-                    <a href="" title="{{ language.post_current_title }}" class="lng-sel">
-                        <span class="term">{{ language.lang_name }}</span>
-                    </a>
-                    {% else %}
-                    <a href="{{ post.url }}" title="{{ language.post_title }}" class="lng">
-                            <span class="term">{{ language.lang_name }}</span>
-                        </a>
-                    {% endif %}
-                    {% endfor %}
-                </span>
-            </div>
-            {% endif %}
+            {% include post_lang.html %}
             <div class="content">
                 <div class="post-title {% if page.feature %} feature {% endif %}">
                     <h1>{{ page.title }}</h1>
