--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -1,6 +1,23 @@
 // UTILITY MIXINS
 // --------------------------------------------------
 
+@function z($name) {
+  @if index($z-indexes, $name) {
+    @return (length($z-indexes) - index($z-indexes, $name)) + 1;    
+  } @else {        
+    @warn 'There is no item "#{$name}" in this list; choose one of: #{$z-indexes}';        
+    @return null;    
+  }
+}
+
+$z-indexes: (    
+  "outdated-browser",    
+  "modal",    
+  "site-header",    
+  "page-wrapper",    
+  "site-footer");
+
+
 // For clearing floats like a boss h5bp.com/q
 @mixin clearfix {
   *zoom: 1;
