--- a/_includes/collecttags.html
+++ b/_includes/collecttags.html
@@ -1,9 +1,13 @@
-{% assign posts=site.posts | where:"lang", navlang %}
+{% if page.lang %}
+    {% assign sposts=site.posts | where:"lang", page.lang %}
+{% else %}
+    {% assign sposts=site.posts %}
+{% endif %}
 {% assign rawtags = "" %}
-{% for post in posts %}
+{% for post in sposts %}
     {% for tag in post.tags %}
         {% if rawtags == "" %}
-        {% assign rawtags = tag %}
+            {% assign rawtags = tag %}
         {% else %}
             {% unless rawtags contains tag %}
                 {% assign rawtags = rawtags | join:'|' | append:'|' | append:tag | split:'|' %}
