--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -25,11 +25,17 @@ layout: compress
                 {{ content }}
 
                 <div class="post-list">
-                    {% assign posts=site.posts | where:"lang", navlang %}
+                    {% if page.lang %}
+                        {% assign posts=site.posts | where:"lang", page.lang %}
+                    {% else %}
+                        {% assign posts=site.posts %}
+                    {% endif %}
+                    
                     {% for post in posts %} 
                     {% if post.project == null %}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
+                            <h5>{{ post.date | date_to_string }}</h5>
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
