Experimental particles.js integration

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,6 +10,7 @@
     <script src="{{ site.url }}/assets/js/dlmenu.en.js"></script>
     {% endif %}
     <script src="{{ site.url }}/assets/js/scripts.js"></script>
+    <script src="{{ site.url }}/assets/js/particles.min.js"></script>
 
     {% if site.google.analytics %}
     <!-- Asynchronous Google Analytics snippet -->
