avatar disabled in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,11 +3,11 @@
     <div class="inner">
 
         {% if site.avatar %}
-        <!--<section class="alt">-->
+        <!--<section class="alt">
           <span class="author-image" >
               <img src="{{ '' | absolute_url }}{{ site.avatar }}" />
           </span>
-        <!--</section>-->
+        </section>-->
         {% endif %}
 
       
