--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,8 @@
 
                 {{ content }}
 
-              </div>
+                {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
+            </div>
           </div>
 
           {% include sidebar.html %}
