--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,3 +4,7 @@
   <script src="{{ 'assets/js/util.js' | absolute_url }}"></script>
   <!--[if lte IE 8]><script src="{{ 'assets/js/ie/respond.min.js' | absolute_url }}"></script><![endif]-->
   <script src="{{ 'assets/js/main.js' | absolute_url }}"></script>
+  {% if page.comments != false %}
+    {% include disqus_comments.html %}
+  {% endif %}
+
