--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -157,7 +157,11 @@
 
       <!-- Footer -->
         <footer id="footer">
-          <p class="copyright">&copy; Marco Stolze. All rights reserved. <br />Design based on: <a href="https://html5up.net/editorial">Editorial theme</a> by <a href="https://andrewbanchi.ch">Andrew Banchich</a>.</p>
+          <p class="copyright">&copy; Marco Stolze. All rights reserved. <br />
+            Design based on: <a href="https://html5up.net/editorial">Editorial theme</a> by 
+            <a href="https://andrewbanchi.ch">Andrew Banchich</a>. <br /> <br />
+            <a href="{{ '' | absolute_url }}impressum/">Impressum</a>
+          </p>
         </footer>
 
     </div>
