--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -140,6 +140,7 @@
             <li class="fa-phone">{{ site.phone }}</li>
             {% endif %}
             <li class="fa-home">
+              Marco Stolze (alias Mc Pride)<br />
               {% if site.street_address %}
                 {{ site.street_address }}<br />
               {% endif %}
