--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -161,7 +161,7 @@
           <p class="copyright">&copy; Marco Stolze. All rights reserved. <br />
             Design based on: <a href="https://html5up.net/editorial">Editorial theme</a> by 
             <a href="https://andrewbanchi.ch">Andrew Banchich</a>. <br /> <br />
-            <a href="{{ '' | absolute_url }}impressum/">Impressum</a>
+            <a href="{{ '' | absolute_url }}impressum/{{ navlang }}/">Impressum</a>
           </p>
         </footer>
 
