--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,13 +32,16 @@
             <li>
               <span class="opener">{{ site.data.messages.locales[navlang].languages }}</span>
               <ul>
+                {% assign lang_ref_pages=site.pages | where:"ref", page.ref %}
+                {% assign lang_ref_posts=site.posts | where:"ref", page.ref %}
+                {% assign lang_ref_pages = lang_ref_pages | concat: lang_ref_posts  | sort: 'lang' %}
                 {% for link in site.data.navigation.locales[navlang].languages %}
-                  {% if link.url contains 'http' %}
-                      {% assign domain = '' %}
-                      {% else %}
-                      {% assign domain = site.url %}
+                  {% assign ref_page=lang_ref_pages | where:"lang", link.lang | first %}
+                  {% if ref_page %}
+                    <li><a href="{{ site.url }}{{ ref_page.url }}">{{ link.title }}</a></li>
+                  {% else %}
+                    <li><a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a></li>
                   {% endif %}
-                  <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
                 {% endfor %}
               </ul>
             </li>
@@ -51,7 +54,7 @@
                         {% else %}
                         {% assign domain = site.url %}
                     {% endif %}
-                    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
+                    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" ref="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
                     {% endfor %}
                     {% for link in site.data.navigation.locales[navlang].tags %}
                     {% if link.url contains 'http' %}
@@ -59,7 +62,7 @@
                         {% else %}
                         {% assign domain = site.url %}
                     {% endif %}
-                    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
+                    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" ref="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
                     {% endfor %}
                 </ul>
             </li>
