switch to single tag pages

--- a/_layouts/tag-list.html
+++ b/_layouts/tag-list.html
@@ -41,7 +41,7 @@ layout: compress
                         {% endif %}
                         {% assign rel_tag_size = ltags.size | times: 4.0 | divided_by: asize | plus: 0.75 %}
                         <li>
-                            <a href="#{{ stag }}" style="text-decoration: none; border-bottom:none">
+                            <a href="{{ site.url }}/tags/{{ navlang }}/{{ stag }}" style="text-decoration: none; border-bottom:none">
                                 <span style="white-space: nowrap; font-size: {{ rel_tag_size }}em; padding: 0.2em;">
                                     {{ stag }}
                                     <span>({{ ltags.size }})</span>
@@ -51,32 +51,6 @@ layout: compress
                     {% endfor %}
                     </ul>
                 </section>
-
-            {% for item in stags %}
-                {% if page.lang %}
-                    {% assign tposts=site.tags[item] | where:"lang", page.lang %}
-                {% else %}
-                    {% assign tposts=site.tags[item] %}
-                {% endif %}
-                <section>
-                    <header class="major">
-                        <h2 id="{{ item }}">{{ item }}</h2>
-                    </header>
-                    <div class="features">
-                    {% for post in tposts %}
-                        {% if post.title != null %}
-                        <article>
-                            <div class="content">
-                                <h5>{{ post.date | date_to_string }}</h5>
-                                <h3><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
-                                <p>{{ post.excerpt }}</p>
-                            </div>
-                        </article>
-                        {% endif %}
-                    {% endfor %}
-                    </div>
-                </section>
-            {% endfor %}                
             </div>
         </div>
 
