--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,13 +21,18 @@ layout: compress
                 <section>
                 	<header class="main">
                 		<h1>{{ page.title }}</h1>
-                	</header>
+                    </header>
 
-                  {% if page.image %}
+                    {% if page.image %}
                 	<span class="image main"><img src="{{ page.image | absolute_url }}" alt="" /></span>
-                  {% endif %}
+                    {% endif %}
 
-                {{ content }}
+                    <p class="reading-time">
+                        {% include read-time.html %}
+                    </p>
+
+                    {{ content }}
+                </section>
 
                 {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
             </div>
