--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,16 +20,17 @@ layout: compress
                 <!-- Content -->
                 <section>
                 	<header class="main">
-                		<h1>{{ page.title }}</h1>
+                        % if site.reading_time %}
+                        <p class="reading-time">
+                            {% include read-time.html %}
+                        </p>
+                        {% endif %}
+                            <h1>{{ page.title }}</h1>
                     </header>
 
                     {% if page.image %}
                 	<span class="image main"><img src="{{ page.image | absolute_url }}" alt="" /></span>
                     {% endif %}
-
-                    <p class="reading-time">
-                        {% include read-time.html %}
-                    </p>
 
                     {{ content }}
                 </section>
