page tags included

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,7 @@ layout: compress
 
                     {{ content }}
                 </section>
+                {% include page-tags.html %}
 
                 {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
             </div>
